crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_all_nulls.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(val, ', ') FROM (VALUES (NULL), (NULL), (NULL)) AS t(val)\""
---
Ok(
    [
        "+---------------------------+",
        "| listagg(t.val,Utf8(\", \")) |",
        "+---------------------------+",
        "|                           |",
        "+---------------------------+",
    ],
)
