crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_basic.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(val, ', ') FROM (VALUES ('apple'), ('banana'), ('cherry')) AS t(val)\""
---
Ok(
    [
        "+---------------------------+",
        "| listagg(t.val,Utf8(\", \")) |",
        "+---------------------------+",
        "| apple, banana, cherry     |",
        "+---------------------------+",
    ],
)
