crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_within_group_order_by.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(name, ', ') WITHIN GROUP (ORDER BY name) FROM (VALUES ('cherry'), ('apple'), ('banana')) AS t(name)\""
---
Ok(
    [
        "+-------------------------------------------------------------+",
        "| listagg(t.name,Utf8(\", \")) ORDER BY [t.name ASC NULLS LAST] |",
        "+-------------------------------------------------------------+",
        "| cherry, apple, banana                                       |",
        "+-------------------------------------------------------------+",
    ],
)
