crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_within_group_order_by_desc.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(name, ' -> ') WITHIN GROUP (ORDER BY name DESC) FROM (VALUES ('apple'), ('banana'), ('cherry')) AS t(name)\""
---
Ok(
    [
        "+-----------------------------------------------------------------+",
        "| listagg(t.name,Utf8(\" -> \")) ORDER BY [t.name DESC NULLS FIRST] |",
        "+-----------------------------------------------------------------+",
        "| apple -> banana -> cherry                                       |",
        "+-----------------------------------------------------------------+",
    ],
)
